# coderunner-rust

./: .gitignore  Cargo.toml  build.rs  test.sh
.github/workflows/: rust.yml
proto/: coderunnerapi.proto
src/: constants.rs  domain.rs  examples.rs  integration_test.rs  main.rs  models.rs  service_example.rs
src/compiler/: basic.rs  errors.rs  mod.rs  stubs.rs  traits.rs
src/core/: domain.rs  mod.rs
src/core/pipeline/: compiling.rs  mod.rs  running.rs
src/core/traits/: compiler.rs  executor.rs  runner.rs
src/grpc/: mappers.rs  mod.rs  models.rs  services.rs
src/native/: executor.rs  mod.rs
src/pipeline/: accepting.rs  compiling.rs  mod.rs  msg_handling.rs  reading.rs  respondning.rs  running.rs
src/runner/: basic.rs  mod.rs  stubs.rs  traits.rs
src/stubs/: compiler.rs  runner.rs
testbins/file_isolation/: Cargo.toml
testbins/file_isolation/src/: main.rs
testbins/file_writer/: Cargo.toml
testbins/file_writer/src/: main.rs
testbins/localhost_isolation/: Cargo.toml
testbins/localhost_isolation/src/: main.rs
testbins/memory_limit/: Cargo.toml
testbins/memory_limit/src/: main.rs
testbins/net_isolation/: Cargo.toml
testbins/net_isolation/src/: main.rs
testbins/peak_memory_usage/: Cargo.toml
testbins/peak_memory_usage/src/: main.rs
testbins/pids_limit/: Cargo.toml
testbins/pids_limit/src/: main.rs
testbins/process_isolation/: Cargo.toml
testbins/process_isolation/src/: main.rs
testbins/stderr_size_limit/: Cargo.toml
testbins/stderr_size_limit/src/: main.rs
testbins/stdout_size_limit/: Cargo.toml
testbins/stdout_size_limit/src/: main.rs
testbins/time_limit/: Cargo.toml
testbins/time_limit/src/: main.rs
