[package]
name = "coderunner-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
dashmap = "6.1.0"
tokio = { version = "1.46.1", features = ["full"] }
uuid = { version = "1.17.0", features = ["v4"] }
prost = "0.13.1"
tonic = "0.13.1"
tokio-stream = "0.1.17"
prost-types = "0.13.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "std"] }
chrono = "0.4.41"
async-trait = "0.1.88"
thiserror = "2.0.12"
futures = "0.3.31"
mockall = "0.13.1"
itertools = "0.14.0"
zbus = "5.9.0"

[build-dependencies]
tonic-build = "0.13.1"
